--- a/Python Modules/blm/blm.cbp
+++ b/Python Modules/blm/blm.cbp
@@ -2,31 +2,23 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="scopes" />
+		<Option title="blm" />
 		<Option pch_mode="2" />
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_Scope_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_BLM_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="/MDd" />
 					<Add option="/W3" />
-					<Add option="/Zi" />
-					<Add option="/EHsc" />
 					<Add option="/DBUILD_DLL" />
+					<Add option="/Zi" />
 					<Add option="/D_DEBUG" />
-					<Add directory="include" />
-					<Add directory="../../Hardware" />
-					<Add directory="../../Hardware/scope" />
-					<Add directory="../../Config" />
-					<Add directory="../../Config/VM" />
-					<Add directory="../../Structs" />
-					<Add directory="../../Utilities" />
+					<Add option="/MDd" />
 				</Compiler>
 				<Linker>
 					<Add option="/DEBUG" />
@@ -34,11 +26,11 @@
 					<Add library="user32" />
 				</Linker>
 				<ExtraCommands>
-					<Add after='cmd /c copy /y &quot;$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).dll&quot; &quot;$(PROJECT_DIR)$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).pyd&quot;' />
+					<Add after='mt.exe /nologo /manifest &quot;bin\Debug\blm.dll.manifest&quot; /outputresource:&quot;bin\Debug\blm.dll&quot;;2' />
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_Scope_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_BLM_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -51,13 +43,8 @@
 					<Add option="/EHsc" />
 					<Add option="/DBUILD_DLL" />
 					<Add option="/DNDEBUG" />
-					<Add directory="../../Config" />
-					<Add directory="../../Config/VM" />
-					<Add directory="../../Hardware" />
-					<Add directory="../../Hardware/scope" />
 					<Add directory="include" />
-					<Add directory="../../Structs" />
-					<Add directory="../../Utilities" />
+					<Add directory="src" />
 				</Compiler>
 				<Linker>
 					<Add option="/INCREMENTAL:NO" />
@@ -68,34 +55,37 @@
 				</ExtraCommands>
 			</Target>
 		</Build>
+		<Compiler>
+			<Add option="/EHsc" />
+		</Compiler>
 		<Unit filename="../../Hardware/VCbase.cpp" />
 		<Unit filename="../../Hardware/VCbase.h" />
 		<Unit filename="../../Hardware/VCheader.h" />
+		<Unit filename="../../Hardware/blm/blmController.cpp" />
+		<Unit filename="../../Hardware/blm/blmController.h" />
+		<Unit filename="../../Hardware/blm/blmInterface.cpp" />
+		<Unit filename="../../Hardware/blm/blmInterface.h" />
 		<Unit filename="../../Hardware/controller.cpp" />
 		<Unit filename="../../Hardware/controller.h" />
 		<Unit filename="../../Hardware/interface.cpp" />
 		<Unit filename="../../Hardware/interface.h" />
-		<Unit filename="../../Hardware/scope/scopeController.cpp" />
-		<Unit filename="../../Hardware/scope/scopeController.h" />
-		<Unit filename="../../Hardware/scope/scopeInterface.cpp" />
-		<Unit filename="../../Hardware/scope/scopeInterface.h" />
-		<Unit filename="../../Structs/scopeStructs.h" />
-		<Unit filename="../../Structs/structs.h" />
+		<Unit filename="../../Structs/blm/blmStructs.h" />
 		<Unit filename="../../Utilities/baseObject.cpp" />
 		<Unit filename="../../Utilities/baseObject.h" />
+		<Unit filename="../../Utilities/blm/blmConfigReader.cpp" />
+		<Unit filename="../../Utilities/blm/blmConfigReader.h" />
 		<Unit filename="../../Utilities/configDefinitions.h" />
 		<Unit filename="../../Utilities/configReader.cpp" />
 		<Unit filename="../../Utilities/configReader.h" />
-		<Unit filename="../../Utilities/scopeConfigReader.cpp" />
-		<Unit filename="../../Utilities/scopeConfigReader.h" />
-		<Unit filename="include/VCscopes.h" />
+		<Unit filename="include/VCblm.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="main.h" />
-		<Unit filename="src/VCscopes.cpp" />
+		<Unit filename="src/VCblm.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
