--- a/Python Modules/charge/charge.cbp
+++ b/Python Modules/charge/charge.cbp
@@ -30,7 +30,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="D:/VELA-CLARA_software/Software/Apps/BLMPlotter/VELA_CLARA_Charge_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_Charge_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
