--- a/Python Modules/llrf/llrf.cbp
+++ b/Python Modules/llrf/llrf.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Release">
-				<Option output="\\apclara1\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_LLRF_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_LLRF_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
