--- a/Python Modules/vela_clara_enums/vela_clara_enums.cbp
+++ b/Python Modules/vela_clara_enums/vela_clara_enums.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Release">
-				<Option output="D:/VELA-CLARA_software/Software/Apps/BLMPlotter/VELA_CLARA_enums" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_enums" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -17,7 +17,6 @@
 					<Add option="/MD" />
 					<Add option="/Ox" />
 					<Add option="/W3" />
-					<Add option="/EHsc" />
 					<Add option="/DBUILD_DLL" />
 					<Add option="/DNDEBUG" />
 					<Add option="/D__VC_ENUM_ONLY__" />
