Commit of all config files as of 25th January 2019

--- a/Config/cameraDAQ.config
+++ b/Config/cameraDAQ.config
@@ -10,43 +10,131 @@ VERSION = 1;
 
 PV_COMMANDS_START;              These are Pvs that are needed to send commands, i.e. switch things on / off, They are not monitored.
 
-#pv_suffix must come first before other paramaters to be added to the struct.
+##pv_suffix must come first before other paramaters to be added to the struct.
 
-PV_SUFFIX_STOP 			= StopAHA;
+PV_DAQ_SUFFIX_START_ACQUIRE   = CAM:Start;
 PV_CHTYPE      			= DBR_ENUM;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
 
-PV_SUFFIX_DATA			= CAM:ArrayData;
+PV_DAQ_SUFFIX_STOP_ACQUIRE   = CAM:Stop;
+PV_CHTYPE      			= DBR_ENUM;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_IA_SUFFIX_ACQUIRE 		= CAM:Acquire;
+PV_CHTYPE      			= DBR_ENUM;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_DATA			= CAM:ArrayData;
 PV_CHTYPE      			= DBR_TIME_LONG;
 PV_MASK        			= DBE_VALUE;
 
-PV_SUFFIX_BKGRND_DATA	= CAM:BackgroundArrayData;
-PV_CHTYPE      			= DBR_TIME_LONG;
-PV_MASK        			= DBE_VALUE;
+PV_DAQ_SUFFIX_FILE_PATH 	= BIN:FilePath;
+PV_CHTYPE      			= DBR_CHAR;
+PV_COUNT            	= 256;
+PV_MASK             	= DBE_VALUE;
 
-PV_SUFFIX_FILE_PATH 			= BIN:FilePath;
-PV_CHTYPE      			= DBR_STRING;
+#PV_DAQ_SUFFIX_FILE_NAME 	= BIN:FileName;
+#PV_CHTYPE      			= DBR_CHAR;
+#PV_COUNT            	= 256;
+#PV_MASK             	= DBE_VALUE;
 
-PV_SUFFIX_FILE_NAME 			= BIN:FileName;
-PV_CHTYPE      			= DBR_STRING;
-
-CAM_FILE_PATH 			= BIN:FileTemplate;
-PV_CHTYPE      			= DBR_STRING;
-
-PV_SUFFIX_FILE_WRITE 			= BIN:FileWriteMode;
+PV_DAQ_SUFFIX_CAPTURE 		= BIN:Capture;
 PV_CHTYPE      			= DBR_ENUM;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_FILE_NUMBER 	= BIN:FileNumber;
+PV_CHTYPE      			= DBR_LONG;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_WRITE 		= BIN:WriteFile;
+PV_CHTYPE      			= DBR_ENUM;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
 
 
+PV_DAQ_SUFFIX_NUM_CAPTURE 	= BIN:NumCapture;
+PV_CHTYPE      			= DBR_LONG;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+##############################################################################################
 
 PV_MONITORS_START;  These are the PVs that will be continuously monitored !
 
-PV_SUFFIX_ACQUIRE 		= CAM:Acquire;
-PV_CHTYPE       		= DBR_ENUM;
-
-PV_SUFFIX_CAM_STATE 			= CAM:ReadStatus;
+PV_DAQ_SUFFIX_CAPTURE_RBV	= BIN:Capture_RBV;
 PV_CHTYPE      			= DBR_ENUM;
-PV_COUNT            = 1;
-PV_CHTYPE           = DBR_ENUM;
-PV_MASK             = DBE_VALUE;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_NUM_CAPTURED	= BIN:NumCaptured_RBV;
+PV_CHTYPE      			= DBR_LONG;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_NUM_CAPTURE_RBV = BIN:NumCapture_RBV;
+PV_CHTYPE      			= DBR_LONG;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_ACQUIRE_RBV	= CAM:Acquire_RBV;
+PV_CHTYPE   			= DBR_ENUM;
+PV_COUNT    			= 1;
+PV_MASK					= DBE_VALUE;
+
+PV_IA_SUFFIX_ACQUIRE_RBV	= CAM:Acquire_RBV;
+PV_CHTYPE   			= DBR_ENUM;
+PV_COUNT    			= 1;
+PV_MASK					= DBE_VALUE;
+
+PV_DAQ_SUFFIX_CAM_STATE 	= CAM:ReadStatus;
+PV_CHTYPE      			= DBR_ENUM;
+PV_COUNT      			= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_IA_SUFFIX_CAM_STATE 	= CAM:ReadStatus;
+PV_CHTYPE      			= DBR_ENUM;
+PV_COUNT      			= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_WRITE_CHECK 	= BIN:WriteStatus;
+PV_CHTYPE      			= DBR_ENUM;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_WRITE_RBV 	= BIN:WriteFile_RBV;
+PV_CHTYPE      			= DBR_ENUM;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_WRITE_MESSAGE = BIN:WriteMessage;
+PV_CHTYPE      			= DBR_CHAR;
+PV_COUNT            	= 256;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_EXPOSURE_RBV 	= CAM:AcquireTime_RBV;
+PV_CHTYPE      			= DBR_DOUBLE;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_ACQ_PERIOD_RBV = CAM:AcquirePeriod_RBV;
+PV_CHTYPE      			= DBR_DOUBLE;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_FREQ_RBV 		= CAM:ArrayRate_RBV;
+PV_CHTYPE      			= DBR_DOUBLE;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
+
+PV_DAQ_SUFFIX_SENSOR_TEMP_RBV = CAM:Temperature_RBV;
+PV_CHTYPE      			= DBR_DOUBLE;
+PV_COUNT            	= 1;
+PV_MASK             	= DBE_VALUE;
 
 OBJECTS_START;
 
@@ -54,19 +142,70 @@ NUMBER_OF_OBJECTS = 2; For sanity checks
 NUMBER_OF_ILOCKS  = 0;  If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 
-NAME    = VC;
-PV_ROOT = CL-EA-DET-01:;
-SCREEN_PV  = YAG01;
-BIT_DEPTH = 16;
-IMAGE_WIDTH = 2560;
-IMAGE_HEIGHT = 2160;
+NAME				= VC;
+PV_ROOT				= CLA-VCA-DIA-CAM-01:;
+SCREEN_NAME			= YAG01;
+IP_ADDRESS_STREAM	= http://192.168.83.31:8080/MJPG1.mjpg;
+MAX_SHOTS_NUMBER	= 600;
+PIX_2_MM_RATIO		= 1.0;
+X_MASK_RAD			= 1000;
+Y_MASK_RAD			= 1000;
+X_MASK_CENTER		= 1235;
+Y_MASK_CENTER		= 1091;
 
-NAME    = CAM01;
-PV_ROOT = CL-EA-DET-01:;
-SCREEN_PV  = YAG02;
-BIT_DEPTH = 12;
-IMAGE_WIDTH = 2560;
-IMAGE_HEIGHT = 2160;
+NAME				= S01-CAM-01;
+PV_ROOT				= CLA-S01-DIA-CAM-01:;
+SCREEN_NAME			= S01-SCR-01;
+IP_ADDRESS_STREAM	= http://192.168.83.32:8080/MJPG1.mjpg;
+MAX_SHOTS_NUMBER	= 600;
+PIX_2_MM_RATIO		= 0.0134;
+X_MASK_RAD			= 1000;
+Y_MASK_RAD			= 1000;
+X_MASK_CENTER		= 1235;
+Y_MASK_CENTER		= 1091;
 
+NAME				= S02-CAM-01;
+PV_ROOT				= CLA-S02-DIA-CAM-01:;
+SCREEN_NAME			= S02-SCR-01;
+IP_ADDRESS_STREAM	= http://192.168.83.32:8080/MJPG2.mjpg;
+MAX_SHOTS_NUMBER	= 600;
+PIX_2_MM_RATIO		= 0.0207;
+X_MASK_RAD			= 1000;
+Y_MASK_RAD			= 1000;
+X_MASK_CENTER		= 1219;
+Y_MASK_CENTER		= 1104;
+
+NAME				= S02-CAM-02;
+PV_ROOT				= CLA-S02-DIA-CAM-02:;
+SCREEN_NAME			= S02-SCR-02;
+IP_ADDRESS_STREAM	= http://192.168.83.32:8080/MJPG3.mjpg;
+MAX_SHOTS_NUMBER	= 600;
+PIX_2_MM_RATIO		= 0.0122;
+X_MASK_RAD			= 1000;
+Y_MASK_RAD			= 1000;
+X_MASK_CENTER		= 1204;
+Y_MASK_CENTER		= 1146;
+
+NAME				= S02-CAM-03;
+PV_ROOT				= CLA-S02-DIA-CAM-03:;
+SCREEN_NAME			= S02-SCR-03;
+IP_ADDRESS_STREAM	= http://192.168.83.32:8080/MJPG4.mjpg;
+MAX_SHOTS_NUMBER	= 600;
+PIX_2_MM_RATIO		= 0.0181;
+X_MASK_RAD			= 800;
+Y_MASK_RAD			= 1000;
+X_MASK_CENTER		= 837;
+Y_MASK_CENTER		= 1102;
+
+NAME				= C2V-CAM-01;
+PV_ROOT				= CLA-C2V-DIA-CAM-01:;
+SCREEN_NAME			= C2V-SCR-01;
+IP_ADDRESS_STREAM	= http://192.168.83.32:8080/MJPG5.mjpg;
+MAX_SHOTS_NUMBER	= 600;
+PIX_2_MM_RATIO		= 0.0179;
+X_MASK_RAD			= 1000;
+Y_MASK_RAD			= 1000;
+X_MASK_CENTER		= 1131;
+Y_MASK_CENTER		= 1132;
 
 END_OF_DATA;
