--- a/Config/claraINJMagnets.config
+++ b/Config/claraINJMagnets.config
@@ -117,7 +117,7 @@ MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13258;
 FIELD_INTEGRAL_COEFFICIENTS = 0.023624156190865, 0.00354362342862975;
 MAGNETIC_LENGTH = 131.245312171472;
-MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";
 PV_ROOT = CLA-S01-MAG-HCOR-01:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-01:; ???
 MAG_TYPE = HCOR;
@@ -134,7 +134,7 @@ MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13259;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0234042553191489, 0.0;
 MAGNETIC_LENGTH = 125;
-MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";
 PV_ROOT = CLA-S01-MAG-HCOR-02:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-02:; ???
 MAG_TYPE = HCOR;
@@ -156,8 +156,7 @@ MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13258;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0231571709981465, 0.00347357564972197;
 MAGNETIC_LENGTH = 128.650949989703;
-MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
-PV_ROOT = CLA-S01-MAG-VCOR-01:;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = CLA-S01-MAG-VCOR-01:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-01:; ???
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
@@ -173,8 +172,7 @@ MANUFACTURER = Danfysik;
 SERIAL_NUMBER = 13259;
 FIELD_INTEGRAL_COEFFICIENTS = 0.0234042553191489, 0.0;
 MAGNETIC_LENGTH = 125;
-MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
-PV_ROOT = CLA-S01-MAG-VCOR-02:;
+MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";PV_ROOT = CLA-S01-MAG-VCOR-02:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-02:; ???
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
