--- a/Config/claraPH1Magnets.config
+++ b/Config/claraPH1Magnets.config
@@ -391,37 +391,37 @@ MAG_SET_MAX_WAIT_TIME = 45;
 MAG_MIN_I = -10;
 MAG_MAX_I = 10;
 
-NAME = S02-HCOR3;
-PV_ROOT = CLA-S02-MAG-HCOR-03:;
-MAG_TYPE = HCOR;
-POSITION = 4.845560313;
-MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 13262;
-FIELD_INTEGRAL_COEFFICIENTS = 0.298156471708927, -0.0431940604081946;
-MAGNETIC_LENGTH = 163;
-MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";
-RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
-NUM_DEGAUSS_STEPS = 9;
-DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
-MAG_SET_MAX_WAIT_TIME = 45;
-MAG_MIN_I = -10;
-MAG_MAX_I = 10;
+;NAME = S02-HCOR3;
+;PV_ROOT = CLA-S02-MAG-HCOR-03:;
+;MAG_TYPE = HCOR;
+;POSITION = 4.845560313;
+;MANUFACTURER = Danfysik;
+;SERIAL_NUMBER = 13262;
+;FIELD_INTEGRAL_COEFFICIENTS = 0.298156471708927, -0.0431940604081946;
+;MAGNETIC_LENGTH = 163;
+;MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front ;end\Measurements\Correctors";
+;RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
+;NUM_DEGAUSS_STEPS = 9;
+;DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
+;MAG_SET_MAX_WAIT_TIME = 45;
+;MAG_MIN_I = -10;
+;MAG_MAX_I = 10;
 
-NAME = S02-VCOR3;
-PV_ROOT = CLA-S02-MAG-VCOR-03:;
-MAG_TYPE = VCOR;
-POSITION = 4.845560313;
-MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 13262;
-FIELD_INTEGRAL_COEFFICIENTS = 0.298156471708927, -0.0431940604081946;
-MAGNETIC_LENGTH = 163;
-MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front end\Measurements\Correctors";
-RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
-NUM_DEGAUSS_STEPS = 9;
-DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
-MAG_SET_MAX_WAIT_TIME = 45;
-MAG_MIN_I = -10;
-MAG_MAX_I = 10;
+;NAME = S02-VCOR3;
+;PV_ROOT = CLA-S02-MAG-VCOR-03:;
+;MAG_TYPE = VCOR;
+;POSITION = 4.845560313;
+;MANUFACTURER = Danfysik;
+;SERIAL_NUMBER = 13262;
+;FIELD_INTEGRAL_COEFFICIENTS = 0.298156471708927, -0.0431940604081946;
+;MAGNETIC_LENGTH = 163;
+;MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC-TDL\Projects\tdl-1168 CLARA\mag - magnets (WP2)\Front ;end\Measurements\Correctors";
+;RI_TOLERANCE = 0.1; these magnets seem to have really jumpy readbacks and power supplies 
+;NUM_DEGAUSS_STEPS = 9;
+;DEGAUSS_VALUES = 5.0,   -5.0,  4.0,   -4.0,   2.50,  -2.50,  1.0,  -1.0,  0.0;
+;MAG_SET_MAX_WAIT_TIME = 45;
+;MAG_MIN_I = -10;
+;MAG_MAX_I = 10;
 
 NAME = C2V-HCOR1;
 PV_ROOT = CLA-C2V-MAG-HCOR-01:;
