--- a/Config/claraQScope.config
+++ b/Config/claraQScope.config
@@ -46,9 +46,9 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #In the compiled code scop1 is the first one in this list,
 #scop2 is the second one in the list etc.
 
-NAME    = VELASCOPE02;
-SCOPE_NAME = VELASCOPE02;
-PV_ROOT = EBT-INJ-SCOPE-01;
+NAME    = CLARASCOPE01;
+SCOPE_NAME = CLARASCOPE01;
+PV_ROOT = CLA-CTR-DIA-SCOPE-01;
 PV_SCOPE_TYPE = NUM;
 
 END_OF_DATA;
