--- a/Config/velaINJBeamPositionMonitors.config
+++ b/Config/velaINJBeamPositionMonitors.config
@@ -82,8 +82,9 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 #In the compiled code scop1 is the first one in this list,
 #scop2 is the second one in the list etc.
 
-NAME    = BPM01;
-PV_ROOT = EBT-INJ-DIA-BPMC-02:;
+NAME    = INJ-BPM01;
+PV_ROOT = EBT-INJ-DIA-BPM-01:;
+XY_TYPE = X_FIRST;
 ATT1CAL = 7;
 ATT2CAL = 6;
 V1CAL 	= 0.990866126418;
@@ -94,8 +95,9 @@ XN      = 0;
 YN      = 0;
 POSITION = 0.9;
 
-NAME    = BPM02;
-PV_ROOT = EBT-INJ-DIA-BPMC-04:;
+NAME    = INJ-BPM02;
+PV_ROOT = EBT-INJ-DIA-BPM-02:;
+XY_TYPE = X_FIRST;
 ATT1CAL = 6;
 ATT2CAL = 6;
 V1CAL 	= 0.994432777404;
@@ -106,8 +108,9 @@ XN      = 0;
 YN      = 0;
 POSITION = 3.519;
 
-NAME    = BPM03;
-PV_ROOT = EBT-INJ-DIA-BPMC-06:;
+NAME    = INJ-BPM03;
+PV_ROOT = EBT-INJ-DIA-BPM-03:;
+XY_TYPE = X_FIRST;
 ATT1CAL = 4;
 ATT2CAL = 5;
 V1CAL 	= 0.999162302408;
@@ -118,8 +121,9 @@ XN      = 0;
 YN      = 0;
 POSITION = 4.462;
 
-NAME    = BPM04;
-PV_ROOT = EBT-INJ-DIA-BPMC-10:;
+NAME    = INJ-BPM04;
+PV_ROOT = EBT-INJ-DIA-BPM-04:;
+XY_TYPE = Y_FIRST;
 ATT1CAL = 4;
 ATT2CAL = 6;
 V1CAL 	= 1.02152888417;
@@ -130,8 +134,9 @@ XN      = 0;
 YN      = 0;
 POSITION = 10.215;  Added length of SP1 line to get things in the right order
 
-NAME    = BPM05;
-PV_ROOT = EBT-INJ-DIA-BPMC-12:;
+NAME    = INJ-BPM05;
+PV_ROOT = EBT-INJ-DIA-BPM-05:;
+XY_TYPE = Y_FIRST;
 ATT1CAL = 6;
 ATT2CAL = 6;
 V1CAL 	= 0.994432777404;
@@ -142,8 +147,9 @@ XN      = 0;
 YN      = 0;
 POSITION = 14.121;  Added length of SP1 line to get things in the right order
 
-NAME    = BPM06;
-PV_ROOT = EBT-INJ-DIA-BPMC-14:;
+NAME    = INJ-BPM06;
+PV_ROOT = EBT-INJ-DIA-BPM-06:;
+XY_TYPE = X_FIRST;
 ATT1CAL = 4;
 ATT2CAL = 6;
 V1CAL 	= 1.02152888417;
