--- a/Config/velaINJMagnets - Copy.config
+++ b/Config/velaINJMagnets - Copy.config
@@ -8,10 +8,6 @@ spaces are skipped
 ; indicates end of line (data entry)
 on a keyword line comments can go after;
 
-please write floating point numbers with at least 1 decimal point, i.e. 4.0 not 4
-
-23/6/2017 This is now the new-scheme implemented by Rory, si is now seti, ri is now readi, ilck are different  
-
 BJAS 13/12/16: I'm populating this from PHW's v10 schematic.
 Values with ??? after them may be wrong, or need modification.
 
@@ -29,7 +25,7 @@ PV_MASK     = DBE_VALUE;
 PV_SUFFIX_SETI = SETI; clara stuff that may change if they decide to do a consistent naming scheme 
 PV_CHTYPE  = DBR_DOUBLE;
 PV_COUNT   = 1;
-PV_MASK    = DBE_VALUE;
+PV_MASK     = DBE_VALUE;
 
 PV_MONITORS_START;   These are the PVs that will be continuously monitored, keep them separate from Commands, (but a command can also be monitored, i.e. SI, this should be handled in the interface)
 
@@ -56,9 +52,7 @@ PV_MASK        = DBE_VALUE;
 OBJECTS_START;
 NUMBER_OF_OBJECTS = 17;
 
-NUMBER_OF_ILOCKS  = 0;  (in the old scheme: Most have 6 or 8 (but not the BSOL). Redefine before the "NAME" parameter")
-						in the new scheme each magnet has a single RILK, provided by controls)
-
+NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the "NAME" paramater"
  ___ _____ __   ___
 / __(  _  (  ) / __)
 \__ \)(_)( )(__\__ \
@@ -68,14 +62,13 @@ NAME = BSOL;
 POSITION = 0.000; longitudinal position along the lattice (in metres) - used to define magnet order
 MANUFACTURER = Danfysik;
 
-;As with the SOL, these FICs work a little differently. The field at the cathode is calculated using
-;B_cath = coeff_a . [y, y², y³, x, xy, xy², x², x²y, x²y², x²y³, x³, x³y]
-;where x is the BC current and y is the solenoid current
-;coeff_a are the first 12 coefficients, the rest are coeff_b which translates current into integrated field.
-;                            (coeff_a ........................................................................................................................................................) (coeff_b.....................................)
-FIELD_INTEGRAL_COEFFICIENTS = 0.000513431, -1.27695E-07, 1.61655E-10, -0.032733798, -4.29885E-06, 2.28967E-08, 0.001833327, -2.5354E-06, -1.04715E-09, -1.61177E-12, -2.94837E-05, 2.13938E-07,  -0.003957362, 0.246073139, -4.393602393, 0.0;
-;old values: FIELD_INTEGRAL_COEFFICIENTS = 0.000449207, -1.07199E-07, 1.31132E-10, -0.029521811, -4.34196E-06, 1.8541E-08, 0.001654436, -1.89555E-06, -7.20952E-10, -1.51066E-12, -2.68258E-05, 1.648E-07,  -3.46288e-4, 0.021356715, -0.38108999, 0.0;
-MAGNETIC_LENGTH = 12.5;
+As with the SOL, these FICs work a little differently. The field at the cathode is calculated using
+B_cath = coeff_a . [y, y², y³, x, xy, xy², x², x²y, x²y², x²y³, x³, x³y]
+where x is the BC current and y is the solenoid current
+coeff_a are the first 12 coefficients, the rest are coeff_b which translates current into integrated field.
+                             (coeff_a ......................................................................................................................................................) (coeff_b...................................)
+FIELD_INTEGRAL_COEFFICIENTS = 0.000449207, -1.07199E-07, 1.31132E-10, -0.029521811, -4.34196E-06, 1.8541E-08, 0.001654436, -1.89555E-06, -7.20952E-10, -1.51066E-12, -2.68258E-05, 1.648E-07,  -3.46288e-4, 0.021356715, -0.38108999, 0.0;
+MAGNETIC_LENGTH = 12.91;
 PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = BSOL;
@@ -83,28 +76,21 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 7.6,   -7.38,  5.0,   -5.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE = 0.1;
-MAG_MAX_I = 7.0;
-MAG_MIN_I = -7.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
-
-;old value NUMBER_OF_ILOCKS  = 6; djs 23/6/2017
-NUMBER_OF_ILOCKS  = 0;
-
+NUMBER_OF_ILOCKS  = 6;
 
 NAME = SOL;
 MANUFACTURER = SEF;
 SERIAL_NUMBER = 02;
 POSITION = 0.197;
 
-;The field integral coefficients work a little differently here. The Larmor angle is calculated using
-;theta_L = coeff_a * I . [1, p, p**2, p**3, p**4] where p is the momentum and I is the solenoid current
-;These coefficients have been calculated using the rf_sol_tracking code and the calc-larmor-angle-coeffs.py script.
-;coeff_a are the first 5 coefficients, the rest are coeff_b which translates current into integrated field.
-;                            (coeff_a ............................................................) (coeff_b ...................................)
-FIELD_INTEGRAL_COEFFICIENTS = 2.17321571, -0.858179277, 0.172127130, -0.0171033399, 6.70371530e-04,  -3.96026E-08, 1.71273E-05, 0.160949258, 0.0;
-;old values: FIELD_INTEGRAL_COEFFICIENTS = 2.13556165, -0.843299065, 0.168958882, -0.0167710091, 6.56775844e-04,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
-;old values: FIELD_INTEGRAL_COEFFICIENTS = 104.285048, -43.2881185, 0.924829558, -0.0890716383, 4.26526273,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
+The field integral coefficients work a little differently here. The Larmor angle is calculated using
+theta_L = coeff_a . [1, p, I, p*I, p**2] where p is the momentum and I is the solenoid current
+These coefficients have been calculated using the rf_sol_tracking code and the calc-larmor-angle-coeffs.py script.
+coeff_a are the first 5 coefficients, the rest are coeff_b which translates current into integrated field.
+                             (coeff_a .......................................................) (coeff_b ...................................)
+FIELD_INTEGRAL_COEFFICIENTS = 104.285048, -43.2881185, 0.924829558, -0.0890716383, 4.26526273,  -3.53922E-08, 1.53138E-05, 0.167819191, 0.0;
 MAGNETIC_LENGTH = 139.50;
 PV_ROOT = EBT-INJ-MAG-SOL-01:;
 MAG_TYPE = SOL;
@@ -112,10 +98,7 @@ RI_TOLERANCE = 0.1;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 250.0, -250.0, 150.0, -150.0, 75.0, -75.0, 30.0, -30.0, 10.0, -10.0, 0.0;
 DEGAUSS_TOLERANCE  = 2;
-MAG_MAX_I = 250.0;
-MAG_MIN_I = -250.0;
 MAG_SET_MAX_WAIT_TIME = 45;
-MAGNET_BRANCH = BSOL; This is used to signify that the SOL & BSOL are linked
 
  _   _ ___ _____ ____
 ( )_( / __(  _  (  _ \
@@ -140,8 +123,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR02;
@@ -158,8 +139,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR03;
@@ -176,8 +155,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR04;
@@ -194,8 +171,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR05;
@@ -213,8 +188,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR06;
@@ -231,8 +204,6 @@ RI_TOLERANCE = 0.015;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR07;
@@ -249,8 +220,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR08;
@@ -267,8 +236,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR09;
@@ -285,8 +252,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR10;
@@ -303,8 +268,6 @@ MAG_TYPE = HCOR;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR11;
@@ -322,8 +285,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
  _  _ ___ _____ ____
 ( \/ / __(  _  (  _ \
@@ -344,8 +305,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR02;
@@ -362,8 +321,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR03;
@@ -380,8 +337,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR04;
@@ -398,8 +353,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR05;
@@ -417,8 +370,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR06;
@@ -435,8 +386,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR07;
@@ -453,8 +402,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR08;
@@ -471,8 +418,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR09;
@@ -489,8 +434,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR10;
@@ -508,8 +451,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR11;
@@ -527,8 +468,6 @@ RI_TOLERANCE = 0.01;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 5.0;
-MAG_MIN_I = -5.0;
 MAG_SET_MAX_WAIT_TIME = 45;
  _____ __  __   __   ____  ___
 (  _  (  )(  ) /__\ (  _ \/ __)
@@ -550,8 +489,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD02;
@@ -563,12 +500,10 @@ MAGNETIC_LENGTH = 125.145131747801;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
-RI_TOLERANCE = 0.005;
+RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD03;
@@ -580,12 +515,10 @@ MAGNETIC_LENGTH = 125.337920371927;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
-RI_TOLERANCE = 0.005;
+RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD04;
@@ -601,8 +534,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD05;
@@ -619,8 +550,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD06;
@@ -637,8 +566,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 /// Back to unganged
@@ -656,8 +583,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD08;
@@ -673,8 +598,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD09;
@@ -690,8 +613,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD10;
@@ -707,8 +628,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD11;
@@ -725,8 +644,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD12;
@@ -742,8 +659,6 @@ MAG_TYPE = QUAD;
 RI_TOLERANCE = 0.001;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD13;
@@ -760,8 +675,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD14;
@@ -778,8 +691,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD15;
@@ -795,8 +706,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
  ____ ____ ____ _____ __   ____ ___
@@ -817,14 +726,11 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 9.98,  -9.98,  6.0,   -6.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
-/// These are  ganged // (were?? not sure till we can switch them back on again) djs 23/6/2017
+/// These are ganged
 
-;old value NUMBER_OF_ILOCKS  = 8; djs 23/6/2017 
-NUMBER_OF_ILOCKS  = 0;
+NUMBER_OF_ILOCKS  = 8;
 
 NAME = DIP02;
 POSITION = 16.169;
@@ -839,12 +745,9 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 9.98,  -9.98,  6.0,   -6.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
-;old value NUMBER_OF_ILOCKS  = 6; djs 23/6/2017 
-NUMBER_OF_ILOCKS  = 0;
+NUMBER_OF_ILOCKS  = 6;
 
 NAME = DIP03;
 POSITION = 17.859;
@@ -860,8 +763,6 @@ RI_TOLERANCE = 0.001;
 NUM_DEGAUSS_STEPS = 11;
 DEGAUSS_VALUES  = 9.98,  -9.98,  6.0,   -6.0,   4.0,  -4.0,  2.0,  -2.0,  1.0,  -1.0,  0.0;
 DEGAUSS_TOLERANCE  = 0.1;
-MAG_MAX_I = 10.0;
-MAG_MIN_I = -10.0;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 END_OF_DATA;
