--- a/Config/C2BCharge.config
+++ b/Config/C2BCharge.config
@@ -14,41 +14,29 @@ VERSION = 1;
 
 PV_MONITORS_START;          These are the PVs that will be continuously monitored
 
-PV_SUFFIX_P1  = P1;
-PV_COUNT      = 1;
-PV_CHTYPE     = DBR_TIME_DOUBLE;
-PV_MASK       = DBE_VALUE;
-DIAG_TYPE     = WCM;
+PV_SUFFIX_CHARGE_V = V;
+PV_COUNT           = 1;
+PV_CHTYPE          = DBR_TIME_DOUBLE;
+PV_MASK            = DBE_VALUE;
 
-PV_SUFFIX_P2  = P2;
-PV_COUNT      = 1;
-PV_CHTYPE     = DBR_TIME_DOUBLE;
-PV_MASK       = DBE_VALUE;
-DIAG_TYPE     = ICT1;
-
-PV_SUFFIX_P3  = P3;
-PV_COUNT      = 1;
-PV_CHTYPE     = DBR_TIME_DOUBLE;
-PV_MASK       = DBE_VALUE;
-DIAG_TYPE     = ED_FCUP;
-
-PV_SUFFIX_P4  = P4;
-PV_COUNT      = 1;
-PV_CHTYPE     = DBR_TIME_DOUBLE;
-PV_MASK       = DBE_VALUE;
-DIAG_TYPE     = ICT2;
+PV_SUFFIX_CHARGE_Q = Q;
+PV_COUNT           = 1;
+PV_CHTYPE          = DBR_TIME_DOUBLE;
+PV_MASK            = DBE_VALUE;
 
 OBJECTS_START;
-NUMBER_OF_OBJECTS = 1;      For sanity checks
+NUMBER_OF_OBJECTS = 2;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
-
 
 #In the compiled code scop1 is the first one in this list,
 #scop2 is the second one in the list etc.
 
-NAME    = VELASCOPE02;
-SCOPE_NAME = VELASCOPE02;
-PV_ROOT = EBT-INJ-SCOPE-01;
-PV_SCOPE_TYPE = NUM;
+NAME    = WCM;
+PV_ROOT = CLA-S01-DIA-WCM-01;
+DIAG_TYPE = WCM;
+
+NAME    = S02-FCUP;
+PV_ROOT = CLA-S02-DIA-FCUP-01;
+DIAG_TYPE = S02-FCUP;
 
 END_OF_DATA;
