--- a/Config/Legacy/velaBA2ComplexScreens.config
+++ b/Config/Legacy/velaBA2ComplexScreens.config
@@ -1,4 +1,4 @@
-VELA BA1 VARIABLE SCREENS CONFIG FILE
+VELA INJECTOR VARIABLE SCREENS CONFIG FILE
 
 START_OF_DATA;
 
@@ -67,10 +67,11 @@ OBJECTS_START;
 NUMBER_OF_OBJECTS = 0; 	#For sanity checks
 NUMBER_OF_ILOCKS = 0;		#If the number of interlocks changes between objects, then redefine this before the "name" parameter
 
-#name must come first before other factors#
+#name must come first before other factors
+
+#NOTE added a colon to the end of all PV_ROOT's, this is different to the first version of the screens project,
+#however it solved the problem of the program not subscribing to the chids in the new version.
+
 
 
 END_OF_DATA;
-
-
-
