--- a/Config/claraPH1BeamPositionMonitors.config
+++ b/Config/claraPH1BeamPositionMonitors.config
@@ -1,6 +1,6 @@
 VELA BPM CONFIG FILE v1
 
-##########Update: Tim Price changed BPM PV prefixes on 18.04.2017###############
+##########Update: Tim Price changed BPM PV prefixes on 18.04.2017################
 
 
 Feel free to write any comments all over this file,
@@ -60,12 +60,12 @@ PV_CHTYPE          = DBR_LONG;
 PV_MASK            = DBE_VALUE;
 
 PV_SUFFIX_BPM_X    = X;
-PV_COUNT           = 1;
+PV_COUNT           = 2;
 PV_CHTYPE          = DBR_TIME_DOUBLE;
 PV_MASK            = DBE_VALUE;
 
 PV_SUFFIX_BPM_Y    = Y;
-PV_COUNT           = 1;
+PV_COUNT           = 2;
 PV_CHTYPE          = DBR_TIME_DOUBLE;
 PV_MASK            = DBE_VALUE;
 
@@ -84,50 +84,54 @@ NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects,
 
 NAME    = S01-BPM01;
 PV_ROOT = CLA-S01-DIA-BPM-01:;
-ATT1CAL = 10;
-ATT2CAL = 11;
-V1CAL 	= 0.9398;
-V2CAL	= 0.9678;
-QCAL 	= 68;
-MN      = 9.5;
+XY_TYPE = Y_FIRST;
+ATT1CAL = 9; 13;
+ATT2CAL = 11; 15;
+V1CAL 	= 0.995807861304; 0.970542023703;
+V2CAL	= 1.03741623582; 1.02443083599;
+QCAL 	= 42.6028217662; 80.7397180655;
+MN      = 15;
 XN      = 0;
 YN      = 0;
 POSITION = 0.9377;
 
 NAME    = S02-BPM01;
 PV_ROOT = CLA-S02-DIA-BPM-01:;
-ATT1CAL = 8;
-ATT2CAL = 8;
-V1CAL 	= 0.9808;
-V2CAL	= 0.9686;
-QCAL 	= 68;
-MN      = 9.5;
+XY_TYPE = Y_FIRST;
+ATT1CAL = 7; 12;
+ATT2CAL = 7; 11;
+V1CAL 	= 0.977457737224; 0.93660805449180762;
+V2CAL	= 1.02308799475; 1.0180522333830595;
+QCAL 	= 41.3503481278; 79.354008449572461;
+MN      = 15;
 XN      = 0;
 YN      = 0;
 POSITION = 3.6228;
 
 NAME    = S02-BPM02;
 PV_ROOT = CLA-S02-DIA-BPM-02:;
-ATT1CAL = 9;
-ATT2CAL = 9;
-V1CAL 	= 0.9642;
-V2CAL	= 0.9588;
-QCAL 	= 68;
-MN      = 9.5;
-XN      = 0;
-YN      = 0;
-POSITION = 11.624; Length of C2V and SP1 line (5.172m) added on to put QUAD05 after it
-
-NAME    = C2V-BPM01;
-PV_ROOT = CLA-C2V-DIA-BPM-01:;
-ATT1CAL = 8;
-ATT2CAL = 8;
-V1CAL 	= 0.974;
-V2CAL	= 0.958;
-QCAL 	= 68;
-MN      = 9.5;
+XY_TYPE = Y_FIRST;
+ATT1CAL = 12;
+ATT2CAL = 12;
+V1CAL 	= 0.95803332086652515;
+V2CAL	= 0.9614442036021501;
+QCAL 	= 77.167131378440871;
+MN      = 15;
 XN      = 0;
 YN      = 0;
 POSITION = 6.5369;
+
+NAME    = C2V-BPM01;
+PV_ROOT = CLA-C2V-DIA-BPM-01:;
+XY_TYPE = Y_FIRST;
+ATT1CAL = 12;
+ATT2CAL = 9;
+V1CAL 	= 0.94725020825862882;
+V2CAL	= 0.98729416672140358;
+QCAL 	= 77.743681418982106;
+MN      = 15;
+XN      = 0;
+YN      = 0;
+POSITION = 11.624; Length of C2V and SP1 line (5.172m) added on to put QUAD05 after it
 
 END_OF_DATA;
