--- a/Config/claraQScopeTrace.config
+++ b/Config/claraQScopeTrace.config
@@ -39,21 +39,16 @@ PV_MASK       = DBE_VALUE;
 DIAG_TYPE     = ICT2;
 
 OBJECTS_START;
-NUMBER_OF_OBJECTS = 2;      For sanity checks
+NUMBER_OF_OBJECTS = 1;      For sanity checks
 NUMBER_OF_ILOCKS  = 0;      If the number of interlocks changes between objects, then redefine this before the "name" paramater
 
 
 #In the compiled code scop1 is the first one in this list,
 #scop2 is the second one in the list etc.
 
-NAME          = VELASCOPE02;
-SCOPE_NAME    = VELASCOPE02;
-PV_ROOT       = EBT-INJ-SCOPE-01;
-TIMEBASE      = 0.000000001;  Currently the scope timebase is set to 200ns/div - this is needed for calculating areas
-
-NAME          = VELASCOPE01;
-SCOPE_NAME    = VELASCOPE01;
-PV_ROOT       = EBT-INJ-SCOPE-02;
+NAME          = CLARASCOPE01;
+SCOPE_NAME    = CLARASCOPE01;
+PV_ROOT       = CLA-CTR-DIA-SCOPE-01;
 TIMEBASE      = 0.000000001;  Currently the scope timebase is set to 200ns/div - this is needed for calculating areas
 
 END_OF_DATA;
