back up due to desktop computer issues :(

--- a/Python Modules/general_monitor/general_monitor.cbp
+++ b/Python Modules/general_monitor/general_monitor.cbp
@@ -68,6 +68,7 @@
 			<code_completion />
 			<envvars />
 			<debugger />
+			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
