--- a/Python Modules/rf_mod/rf_modPYD.cbp
+++ b/Python Modules/rf_mod/rf_modPYD.cbp
@@ -113,6 +113,7 @@
 			<envvars />
 			<debugger />
 			<lib_finder disable_auto="1" />
+			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
