--- a/Python Modules/cameras/cameras.cbp
+++ b/Python Modules/cameras/cameras.cbp
@@ -46,7 +46,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_Camera_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3\apclara\test\Controllers\bin\stage\VELA_CLARA_Camera_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -111,6 +111,7 @@
 			<envvars />
 			<debugger />
 			<lib_finder disable_auto="1" />
+			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
