--- a/Python Modules/pilaser/pilaserPYD.cbp
+++ b/Python Modules/pilaser/pilaserPYD.cbp
@@ -32,7 +32,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\apclara1.dl.ac.uk\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_PILaser_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\claraserv3\apclara\test\Controllers\bin\stage\VELA_CLARA_PILaser_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
