--- a/Python Modules/rf_mod/rf_modPYD.cbp
+++ b/Python Modules/rf_mod/rf_modPYD.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="ms_visual_c_2012" />
 		<Build>
 			<Target title="Debug">
-				<Option output="\\claraserv3\apclara\test\Controllers\bin\stage\VELA_CLARA_RF_Modulator_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_RF_Modulator_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
@@ -31,7 +31,7 @@
 				</ExtraCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="\\claraserv3\apclara\test\Controllers\bin\stage\VELA_CLARA_RF_Modulator_Control" prefix_auto="1" extension_auto="1" />
+				<Option output="\\apclara1\ControlRoomApps\Controllers\bin\stage\VELA_CLARA_RF_Modulator_Control" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="ms_visual_c_2012" />
